# CHEN

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/samples/: demo_thesis_001.md  demo_thesis_002.md  demo_thesis_003.md  demo_thesis_004.md  demo_thesis_005.md
src/thesis_agent/: models.py
src/thesis_agent/cli/: ingest.py
src/thesis_agent/llm/: __init__.py  mock.py
src/thesis_agent/loaders/: pdf_loader.py
src/thesis_agent/pipeline/: ingest.py  retrieval.py
src/thesis_agent/retrieval/: __init__.py
src/thesis_agent/tools/: topic.py
src/thesis_agent/ui/: i18n.py  pdf_actions.py  services.py
